Bug fixes and no deprecated api